  * SBCL now builds and runs on MacOS X (version 10.2), or perhaps
    more accurately, on the Darwin kernel running on PowerPC hardware.
    (thanks to Brian Mastenbrook, Pierre Mai and Patrik Nordebo)
  * Compiler code deletion notes now signal a condition of type
    SB-EXT:CODE-DELETION-NOTE (a subtype of SB-EXT:COMPILER-NOTE) with
    an associated MUFFLE-WARNING restart.
  * bug fix: WITH-OUTPUT-TO-STRING (and MAKE-STRING-OUTPUT-STREAM) now
    accept and act upon their :ELEMENT-TYPE keyword argument.
    (reported by Edi Weitz)
  * bug fix: FILE-POSITION now accepts position designators up to
    ARRAY-DIMENSION-LIMIT or the extreme of the off_t range, whichever
    is the greater.  (thanks to Patrik Nordebo)
  * bug fix: MAKE-ARRAY ignored :INITIAL-CONTENTS NIL. (reported by
    Kalle Olavi Niemitalo)
  * bug fix: the CLASS-PROTOTYPE of the GENERIC-FUNCTION class is now
    printable.  (reported by Eric Marsden)
  * bug fix in sb-posix: mmap() now works on systems with a 64-bit
    off_t, including Darwin and FreeBSD.  (thanks to Andreas Fuchs)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** The system now obeys the constraint imposed by
       UPGRADED-ARRAY-ELEMENT-TYPE that the upgraded array element
       types form a lattice under type intersection.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))